# spotify-listening-habits

./: .gitignore  Dockerfile  README.md  analytics_flow.py  docker-compose.yaml  prefect.toml  prefect.yaml  pyproject.toml  requirements.txt  spotify_etl_flow.py  token_init.py
.github/workflows/: pytest.yaml
airflow/: Dockerfile  docker-compose.yaml
airflow/dags/: spotify_dag.py  spotify_history_dag.py
dags/: spotify_api.py  spotify_dag.py  spotify_history_dag.py  spotify_utils.py
dags/sql/: create_tables.sql  played_schema.sql
sql/: calc_artist_monthly.sql  create_tables.sql  reset_stats_tables.sql  staging_to_prod.sql
src/analytics/: flow.py
src/analytics/sql/: reset_stats_tables.sql
src/api/: main.py
src/spotify_etl/: flow.py  token_init.py  utils.py
src/spotify_etl/prefect_blocks/: create_blocks.py  create_pg_block.py  create_spotipy_block.py  create_token_block.py
src/spotify_etl/sql/: create_tables.sql  load_tables.sql
tests/: test_clean_track_and_played.py  test_create_track_artist.py  test_extract_artists.py  test_extract_audio_features.py  test_extract_recently_played.py  test_extract_tracks.py  test_get_track_from_played.py
utils/: spotify_utils.py
