[project]
name = "spotify-listening-habits"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.1",
    "spotipy>=2.25.1",
    "sqlalchemy>=2.0.43",
    "prefect[sqlalchemy]>=3.4.13",
    "psycopg2-binary>=2.9.10",
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.prefect]
api.url = "<your-prefect-url/api>"
